# probitas

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-28-feat-guardrail-regression-testing-cli-plan.md
examples/: policy.yaml
examples/tests/: test_entitlements.yaml  test_pii_detection.yaml  test_sql_injection.yaml
src/probitas/: __init__.py  _types.py  cli.py  coverage.py  engine.py  loader.py  report.py
src/probitas/templates/: report.html
tests/: conftest.py  test_cli.py  test_coverage.py  test_engine.py  test_loader.py  test_report.py
