[project]
name = "probitas"
version = "0.0.1"
description = "Guardrail regression testing for LLM agent tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Terry Li", email = "terry.li.hm@gmail.com" }]
keywords = ["ai", "agent", "guardrails", "testing", "ci-cd", "compliance"]

[project.urls]
Homepage = "https://github.com/terry-li-hm/probitas"
Repository = "https://github.com/terry-li-hm/probitas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probitas"]
