[project]
name = "probitas"
version = "0.1.2"
description = "Guardrail regression testing for LLM agent tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Terry Li", email = "terry.li.hm@gmail.com" }]
keywords = ["ai", "agent", "guardrails", "testing", "ci-cd", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
report = ["jinja2>=3.1"]
all = ["pyyaml>=6.0", "jinja2>=3.1"]

[project.scripts]
probitas = "probitas.cli:main"

[project.urls]
Homepage = "https://github.com/terry-li-hm/probitas"
Repository = "https://github.com/terry-li-hm/probitas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probitas"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "pyyaml>=6.0", "jinja2>=3.1"]
